assets/css/stlye.css
body{
   display: flex;
   flex-direction: column;
   line-height: 1.5;
}
main{
  display: flexbox;
  position: relative;
  flex-direction: column;
}
header{
   display: flex;
   justify-content: space-between;
   background-color: #30353d;
   color: #92CCCE;
   padding: 2% 0% 2% 0%;
}

header h1{
   display: flex;
   justify-content: right;
   background-color: #92CCCE;
   color: #30353d; 
   font-size: 200%;
   min-width: 350px;
}


header ul{
display: flex;
justify-content: space-evenly;
min-width: 450px;
font-size: 125%;
padding: 2%;
}

nav a{
   display: flex;
   color: #92CCCE;
   
}
.header-img{
   position: relative;
   background-image: url(../images/02-hero-bg.jpg);
   height: 200px;
   width: 100%;
   background-size: cover;
}


h2 {
   border-right: 5px solid #445877;
   color: #445877;
   font-size: 200%;
   text-align: end;
   padding: 0% 2% 0% 2%;
   margin: 2% 2%   
}

 .caption{
display: inline;

background-color: #92CCCE;
color: #30353d;
font-size: 200%;
padding: 4px 4px;
}

.surf{
   margin: 2%;
   background-image: url(../images/02-portfolio-4.jpg);
   background-size: cover;
  height: auto;
  width: auto;
  min-width: 50vw;
  min-height: 400px;
  border: 5px solid #92CCCE;
}

.para{
   display: flex;
   justify-content: left;
  padding: 2% 2%;
  align-items: left; 
}

p{
   padding: 0 2%;


}

.container{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   width: 80%;
}

.text {
   display: flex;
   flex-direction: column;
   bottom: 20px;
   left: 0px;
   padding: 5px;
   background-color: #92CCCE;
   color: #30353d;
}

.LED{
   margin: 4%;
   justify-content: space-evenly;
   background-image: url(../images/02-portfolio-1.jpg);
   background-size: cover;
   height: auto;
   width: auto;
   min-width: 30vw;
   min-height: 200px;
   border: 5px solid #92CCCE; 
}

.calculator{
   margin: 4%;
   justify-content: space-evenly;
   background-image: url(../images/02-portfolio-2.jpg);
   background-size: cover;
   height: auto;
   width: auto;
   min-width: 30vw;
   min-height: 200px;
   border: 5px solid #92CCCE; 
}

.car{
   margin: 4%;
   justify-content: space-evenly;
   background-image: url(../images/02-portfolio-3.jpg);
   background-size: cover;
   height: auto;
   width: auto;
   min-width: 30vw;
   min-height: 200px;
   border: 5px solid #92CCCE; 
}

.run{
   margin: 4%;
   justify-content: space-evenly;
   background-image: url(../images/02-run-buddy.jpg);
   background-size: cover;
   height: auto;
   width: auto;
   min-width: 30vw;
   min-height: 200px;
   border: 5px solid #92CCCE; 
}

.images{
        display: flex;
       flex-wrap: wrap;
        justify-content: space-between;
        }

@media screen and (max-width: 768px) {
      }
  

